<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/flyBlue"
    android:orientation="vertical">

    <include layout="@layout/title" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400px"
        android:layout_margin="10px"
        android:background="@drawable/shape_background"
        android:orientation="horizontal">

        <com.lab.dxy.bracelet.ui.PickerView
            android:id="@+id/hourPicker"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="200px"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text=":"
            android:textSize="40px" />

        <com.lab.dxy.bracelet.ui.PickerView
            android:id="@+id/minPicker"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="200px"
            android:layout_weight="1" />


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200px"
        android:layout_margin="10px"
        android:background="@drawable/shape_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30px"
            android:text="@string/ChooseWeek"
            android:textSize="30px" />

        <TextView
            android:id="@+id/weekHit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="30px"
            android:text="@string/Never" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/weekHit"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/Mon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30px"
                android:background="@drawable/shape_circle_line"
                android:gravity="center"
                android:onClick="week"
                android:text="@string/Mon"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/Tue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30px"
                android:background="@drawable/shape_circle_line"
                android:gravity="center"
                android:onClick="week"
                android:text="@string/Tue"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/Wed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30px"
                android:background="@drawable/shape_circle_line"
                android:gravity="center"
                android:onClick="week"
                android:text="@string/Wed"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/Thu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30px"
                android:background="@drawable/shape_circle_line"
                android:gravity="center"
                android:onClick="week"
                android:text="@string/Thu"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/Fri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30px"
                android:background="@drawable/shape_circle_line"
                android:gravity="center"
                android:onClick="week"
                android:text="@string/Fri"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/Sat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30px"
                android:background="@drawable/shape_circle_line"
                android:gravity="center"
                android:onClick="week"
                android:text="@string/Sat"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/Sun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_circle_line"
                android:gravity="center"
                android:onClick="week"
                android:text="@string/Sun"
                android:textColor="@color/white" />


        </LinearLayout>


    </RelativeLayout>


    <RelativeLayout
        android:layout_margin="10px"
        android:id="@+id/rl_delete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_background"
        android:clickable="true">


        <TextView
            android:id="@+id/DistanceTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="20px"
            android:text="距离闹钟响起还有5小时20分" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/DistanceTimeText"
            android:layout_marginLeft="50px"
            android:layout_marginRight="50px"
            android:background="@color/gray" />

        <ImageView
            android:id="@+id/img_delete"
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_centerInParent="true"
            android:layout_marginBottom="25px" />


    </RelativeLayout>

</LinearLayout>