<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="470dp"
    android:background="@color/flyBlue"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/ChooseWeek"
            android:textSize="18sp" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20px"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/once"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10px"
                android:text="一次"
                android:textColor="@color/white"
                android:visibility="gone" />

            <RadioButton
                android:id="@+id/every_time"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="连续"
                android:textColor="@color/white"
                android:visibility="gone" />

        </RadioGroup>


    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@color/lightskyblue" />

    <RelativeLayout
        android:id="@+id/rl_mon"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/selector_text"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/Mon"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/ck_mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="false" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_tue"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/selector_text"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/Tue"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/ck_tue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="false" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_wed"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/selector_text"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/Wed"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/ck_wed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="false" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_thu"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/selector_text"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/Thu"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/ck_thu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="false" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_fri"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/selector_text"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/Fri"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/ck_fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="false" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_sat"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/selector_text"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/Sat"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/ck_sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="false" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_sun"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/selector_text"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/Sun"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/ck_sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="false" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_everyday"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/selector_text"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/Every"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/ck_everyday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="false" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_never"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/selector_text"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/Never"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/ck_never"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="false" />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_text"
            android:text="@string/cancel" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_text"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>

