<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/ll_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="50px">


        <TextView
            android:id="@+id/camera"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:background="@drawable/selector_text"
            android:gravity="center"
            android:text="@string/takePhoto"
            android:textSize="30px" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_centerInParent="true"
            android:background="@color/list_gray" />

        <TextView
            android:id="@+id/album"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:background="@drawable/selector_text"
            android:gravity="center"
            android:text="@string/changeByAlbum"
            android:textSize="30px" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_centerInParent="true"
            android:background="@color/list_gray" />


        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:background="@drawable/selector_text"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="30px" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_centerInParent="true"
            android:background="@color/list_gray" />

    </LinearLayout>


</LinearLayout>